# libhybris

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  LICENSE.BSD-3  LICENSE.BSD-4  LICENSE.ISC  Makefile  Makefile.am  Makefile.old  README  README.md  configure.ac  generate.sh  test.c
common/: Makefile.am  hooks.c  properties.c  properties.h
common/gingerbread/: linker.c  linker_debug.h
common/ics/: dlfcn.c
common/jb/: dlfcn.c  linker.c
egl/: Makefile.am  egl.c  eglhybris.h  fbdev_window.cpp  fbdev_window.h  fdpass.c  native_handle.c  nativewindowbase.cpp  nativewindowbase.h  offscreen_window.cpp  offscreen_window.h  offscreen_window_buffer.cpp  test.c  ws.c  ws.h  ws_fbdev.cpp
hybris/: AUTHORS  Makefile.am  autogen.sh  configure.ac  meson.build  meson_options.txt
hybris/camera/: Makefile.am  camera.c  meson.build
hybris/common/: Makefile.am  dlfcn.c  dso_handle_counters.cpp  dso_handle_counters.h  entries.in  hooks.c  hooks_shm.c  hooks_shm.h  logging.c  logging.h  meson.build  native_handle.c  properties.c  properties.h  pthread_helpers.cpp  pthread_helpers.h  sysconf.c  tls_patcher.c  tls_patcher.h  tls_patcher_aarch64.c  wrapper_code.h  wrapper_code_generic_arm.c  wrappers.c  wrappers.h
hybris/common/gingerbread/: Makefile.am  bionic_tls.h  debugger.c  dlfcn.c  linker.c  linker_environ.c
hybris/common/hooks/: atexit.cpp  atexit.h
hybris/common/ics/: Makefile.am  README.TXT  linker.c  linker_format.c
hybris/common/jb/: Makefile.am  debugger.c  dlfcn.c  linker.c  linker.h  linker_debug.h  linker_format.c  meson.build
hybris/common/mm/: Android.mk  Makefile.am  assert.cpp  debugger.cpp  dlfcn.cpp  hybris_compat.h  libc_logging.cpp  linker.cpp  linker.h  linker_allocator.cpp  linker_allocator.h  linker_block_allocator.cpp  linker_debug.cpp  linker_debug.h  linker_dlfcn.cpp  linker_memory.cpp  linker_mips.cpp  linker_phdr.cpp  linker_phdr.h  linker_relocs.h  meson.build
hybris/common/n/: Makefile.am  debugger.cpp  dlfcn.cpp  linker.cpp  linker.h  linker_allocator.cpp  linker_block_allocator.cpp  linker_debug.h  linker_dlwarning.cpp  linker_gdb_support.cpp  linker_gdb_support.h  linker_mapped_file_fragment.cpp  linker_mips.cpp  linker_non_pie.cpp  linker_phdr.cpp  linker_utils.cpp  meson.build
hybris/common/o/: Makefile.am  dlfcn.cpp  linker.cpp  linker_allocator.cpp  linker_allocator.h  linker_block_allocator.cpp  linker_cfi.cpp  linker_cfi.h  linker_config.cpp  linker_debug.h  linker_dlwarning.cpp  linker_gdb_support.cpp  linker_gdb_support.h  linker_globals.cpp  linker_globals.h  linker_logger.cpp  linker_main.cpp  linker_memory.cpp  linker_mips.cpp  linker_namespaces.cpp  linker_phdr.cpp  linker_soinfo.cpp  linker_soinfo.h  linker_utils.cpp  linker_utils.h  meson.build
hybris/common/q/: Android.bp  Makefile.am  bionic_elf_tls.cpp  dlfcn.cpp  hybris_compat.h  ld.config.format.md  ld_android.cpp  linked_list.h  linked_list_test.cpp  linker.arm.map  linker.cpp  linker.generic.map  linker.h  linker_block_allocator.cpp  linker_block_allocator.h  linker_block_allocator_test.cpp  linker_cfi.cpp  linker_cfi.h  linker_common_types.h  linker_config.cpp  linker_config.h  linker_config_test.cpp  linker_debug.h  linker_dlwarning.h  linker_exidx_static.c  linker_gdb_support.cpp  linker_gdb_support.h  linker_globals.cpp  linker_globals.h  linker_libcxx_support.cpp  linker_logger.cpp  linker_logger.h  linker_main.cpp  linker_main.h  linker_mapped_file_fragment.cpp  linker_mapped_file_fragment.h  linker_memory.cpp  linker_mips.cpp  linker_namespaces.cpp  linker_namespaces.h  (+19 more)
hybris/common/stub/: linker.c  meson.build
hybris/egl/: Makefile.am  egl.c  egl.pc.in  eglhybris.h  fbdev_window.cpp  fdpass.h  helper.cpp  helper.h  meson.build  nativewindowbase.cpp  nativewindowbase.h  offscreen_window.cpp  offscreen_window.h  ws.c  ws.h
hybris/egl/glvnd/: .gitignore  10_libhybris.json.in  egldispatchstubs.c  egldispatchstubs.h  eglglvnd.cpp  meson.build
hybris/glesv1/: Makefile.am  glesv1_cm.c  meson.build
hybris/glesv2/: Makefile.am  glesv2.c  glesv2.pc.in  meson.build
hybris/glesv3/: Makefile.am  glesv3.c  glesv3.pc.in
hybris/gralloc/: GrallocUsageConversion.cpp  Makefile.am  gralloc.c  libgralloc.pc.in  meson.build
hybris/hardware/: Makefile.am  hardware.c  hybris-hardware.pc.in  libhardware.pc.in  meson.build
hybris/hwc2/: Makefile.am  hwc2.c  meson.build
hybris/include/: Makefile.am  meson.build
hybris/input/: Makefile.am  is.c  meson.build
hybris/libnfc-nxp/: Makefile.am  libnfc-nxp.c  libnfc-nxp.pc.in
hybris/libnfc_ndef-nxp/: Makefile.am  libnfc_ndef-nxp.c  libnfc_ndef-nxp.pc.in
hybris/libnfc_ndef_nxp/: Makefile.am  libnfc_ndef_nxp.c  meson.build
hybris/libnfc_nxp/: Makefile.am  libnfc_nxp.c  meson.build
hybris/libsync/: Makefile.am  hybris-sync.pc.in  meson.build  sync.c  sync_test.c
hybris/media/: Makefile.am  media.c  meson.build
hybris/opencl/: meson.build  opencl.c
hybris/properties/: Makefile.am  cache.c  hybris_properties.c  meson.build  properties.c  properties_p.h
hybris/sf/: Makefile.am  meson.build  sf.c
hybris/tests/: Makefile.am  hybris_nativebufferext.h  meson.build  test_audio.c  test_camera.c  test_camera.cpp  test_common.cpp  test_common.h  test_dlopen.c  test_egl.c  test_glesv2.c  test_glesv2.cpp  test_gps.c  test_hwc2.cpp  test_hwcomposer.cpp  test_input.c  test_lights.c  test_media.c  test_media.cpp  test_nfc.c  test_recorder.c  test_recorder.cpp  test_sensors.c  test_sf.c  test_ui.c  test_vibrator.c  test_vulkan.cpp  test_wifi.c
hybris/ui/: Makefile.am  meson.build  ui.c
hybris/utils/: Makefile.am  getprop.c  meson.build
hybris/vibrator/: meson.build  vibrator.c
hybris/vulkan/: Makefile.am  meson.build  vulkan.c  vulkanhybris.h  ws.c  ws.h
hybris/wifi/: meson.build  wifi.c
include/: Makefile.am
include/hardware/: gralloc.h  hardware.h  lights.h
include/system/: window.h
tests/: Makefile.am  fbdev_window.cpp  fbdev_window.h  fdpass.c  nativewindowbase.h  offscreen_window.cpp  offscreen_window.h  test_egl.c  test_glesv2.c  test_lights.c  test_offscreen_rendering.cpp  test_sensors.c
(+287 files in other folders)
