option('adreno_quirks', type : 'boolean', value : false , description : 'Enable adreno quirks')
option('android_headers_dir', type : 'string', description : 'Use android headers available in DIR. See utils/extract-headers.sh')
option('arch', type : 'combo', choices : ['arm', 'arm64', 'x86', 'x86-64'], value : 'arm', description : 'Compile specific CPU target(default=arm)')
option('arm_tracing', type : 'boolean', value : false, description : 'Enable ARM (both 32 and 64-bit) tracing, useful for understanding what the blob is doing, currently only the mm linker is supported')
option('default_egl_platform', type : 'string', value : 'null', description : 'Use NAME as default EGL platform if not specified by environment')
option('default_hybris_ld_library_path', type : 'string', description : 'Use PATH1:PATH2 for default HYBRIS_LD_LIBRARY_PATH if not specified by environment')
option('enable_debug', type : 'boolean', value : false, description : 'Enable debug build')
option('enable_trace', type : 'boolean', value : false, description : 'Enable TRACE statements')
option('glvnd', type : 'boolean', value : 'false', description : 'Enable GLVND support')
option('property_cache', type : 'boolean', value : false, description : 'Enable runtime android property cache')
option('stub_linker', type : 'boolean', value : false, description : 'Enable property cache')
option('ubuntu_camera_headers', type : 'boolean', value : false, description : 'Enable Ubuntu camera headers')
option('ubuntu_linker_overrides', type : 'boolean', value : false, description : 'Enable Ubuntu linker overrides')
option('wayland', type : 'boolean', value : false, description : 'Enable wayland support')
option('wayland_serverside_buffers', type : 'boolean', value : true, description : 'Enable serverside buffer allocation for wayland')
