eglincludedir = $(includedir)/EGL
eglinclude_HEADERS = \
	EGL/egl.h \
	EGL/eglext.h \
	EGL/eglmesaext.h \
	EGL/eglplatform.h

glesincludedir = $(includedir)/GLES
glesinclude_HEADERS = \
	GLES/egl.h \
	GLES/gl.h \
	GLES/glext.h \
	GLES/glplatform.h

gles2includedir = $(includedir)/GLES2
gles2include_HEADERS = \
	GLES2/gl2.h \
	GLES2/gl2ext.h \
	GLES2/gl2platform.h
