eglincludedir = $(includedir)/EGL
eglinclude_HEADERS = \
	EGL/egl.h \
	EGL/eglext.h \
	EGL/eglmesaext.h \
	EGL/eglplatform.h

glesincludedir = $(includedir)/GLES
glesinclude_HEADERS = \
	GLES/egl.h \
	GLES/gl.h \
	GLES/glext.h \
	GLES/glplatform.h

gles2includedir = $(includedir)/GLES2
gles2include_HEADERS = \
	GLES2/gl2.h \
	GLES2/gl2ext.h \
	GLES2/gl2platform.h

khrincludedir = $(includedir)/KHR
khrinclude_HEADERS = \
	KHR/khrplatform.h

clincludedir = $(includedir)/CL
clinclude_HEADERS = \
	CL/cl_ext.h \
	CL/cl_gl_ext.h \
	CL/cl_gl.h \
	CL/cl.h \
	CL/cl.hpp \
	CL/cl_platform.h \
	CL/opencl.h

vgincludedir = $(includedir)/VG
vginclude_HEADERS = \
	VG/openvg.h \
	VG/vgext.h \
	VG/vgplatform.h \
	VG/vgu.h

cutilsincludedir = $(includedir)/cutils
cutilsinclude_HEADERS = \
	cutils/native_handle.h

systemincludedir = $(includedir)/system
systeminclude_HEADERS = \
	system/window.h \
	system/graphics.h

hardwareincludedir = $(includedir)/hardware
hardwareinclude_HEADERS = \
	hardware/fb.h \
	hardware/gralloc.h \
	hardware/hardware.h \
	hardware/sensors.h \
	hardware/lights.h
